--- a/lib/views/partials/sidebar.html
+++ b/lib/views/partials/sidebar.html
@@ -55,6 +55,11 @@
                     <span class="fa fa-file-video-o rs-icon-menu"></span>Courses
                 </a>
             </li>
+             <li class="ng-scope nav">
+                <a href="/invite">
+                    <span class="fa fa-bell rs-icon-menu"></span>Invite
+                </a>
+            </li>
             <!-- end ngIf: $authentication.data.user.username != 'antunes' -->
             <!-- <li ng-class="{active: $location.path().indexOf('/courses') &gt;= 0}">
                 <a href="#">
